# sittir

./: .editorconfig  .eslintignore  .gitattributes  .gitignore  .infigraphignore  .prettierignore  AGENTS.md  CHANGELOG-WIP.md  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE  README.md  TODO.md  handoff.md  oxfmt.config.ts  oxlint.config.ts  package.json  parse-ts.cjs  parse-ts.mjs  parse-ts.mts  pnpm-lock.yaml  pnpm-workspace.yaml  probe-kinds-temp.mts  probe2.mts  probe_prim_test.mts  run-debug-from.mts  run-from-validate.mts  sgconfig.yml  skills-lock.json  spec-004-updates.md  test-read.ts  tree-sitter-typescript.wasm  tsconfig.json  tsconfig.typedoc.json  typedoc.json  vitest.config.ts  vitest.setup.ts  vitest.workspace.ts
rust/: Cargo.toml
rust/crates/sittir-core/: Cargo.toml  build.rs
rust/crates/sittir-core/benches/: render.rs
rust/crates/sittir-core/src/: boundary.rs  engine.rs  filters.rs  format.rs  lib.rs  macros.rs  prepare.rs  read_node.rs  splice.rs  types.rs
rust/crates/sittir-core/tests/: boundary_roundtrip.rs  filters.rs  kind_id.rs  read_node.rs  renderable.rs  splice.rs  views.rs  wire_shape.rs
rust/crates/sittir-parity-tests/: Cargo.toml
rust/crates/sittir-parity-tests/src/: lib.rs
rust/crates/sittir-parity-tests/tests/: native_parser.rs  parity.rs
rust/crates/sittir-python/: Cargo.toml  build.rs  index.d.ts  index.js  package.json  test-fixtures.json
rust/crates/sittir-python-napi/: Cargo.toml  package.json
rust/crates/sittir-python-napi/src/: lib.rs
rust/crates/sittir-python/src/: lib.rs
rust/crates/sittir-python/templates/: _as_pattern.jinja  _assignment_typed.jinja  _collection_elements.jinja  _comparison_operator_comparator.jinja  _comprehension_clauses.jinja  _element_list.jinja  _except_clause_as.jinja  _except_clause_list.jinja  _match_block_block.jinja  _parameters.jinja  _simple_pattern_negative.jinja  _simple_statements.jinja  _suite.jinja  _with_clause_paren.jinja  aliased_import.jinja  argument_list.jinja  as_pattern.jinja  assert_statement.jinja  assignment.jinja  attribute.jinja  block.jinja  case_clause.jinja  case_pattern.jinja  case_tuple_pattern.jinja  class_definition.jinja  class_pattern.jinja  comparison_operator.jinja  complex_pattern.jinja  concatenated_string.jinja  conditional_expression.jinja  constrained_type.jinja  decorated_definition.jinja  decorator.jinja  delete_statement.jinja  dict_pattern.jinja  dictionary.jinja  dictionary_splat.jinja  dictionary_splat_pattern.jinja  dotted_name.jinja  elif_clause.jinja  (+60 more)
rust/crates/sittir-render-python/: Cargo.toml
rust/crates/sittir-render-python/src/: templates.rs
rust/crates/sittir-render-python/templates/: _match_block_block.jinja  class_pattern.jinja  exec_statement.jinja  future_import_statement.jinja  if_statement.jinja  print_statement.jinja  raise_statement.jinja  set.jinja  subscript.jinja  tuple_pattern.jinja  with_statement.jinja
rust/crates/sittir-render-rust/: Cargo.toml
rust/crates/sittir-render-rust/src/: templates.rs
rust/crates/sittir-render-rust/templates/: _macro_definition_bracket.jinja  async_block.jinja  extern_crate_declaration.jinja  field_initializer_list.jinja  function_type.jinja  generic_function.jinja  let_condition.jinja  tuple_expression.jinja  where_clause.jinja
rust/crates/sittir-render-typescript/: Cargo.toml
rust/crates/sittir-render-typescript/src/: templates.rs
rust/crates/sittir-render-typescript/templates/: array_pattern.jinja  debugger_statement.jinja  enum_body.jinja  expression_statement.jinja  jsx_element.jinja  lexical_declaration.jinja  namespace_export.jinja
rust/crates/sittir-rust/: Cargo.toml  build.rs  index.d.ts  index.js  package.json  test-fixtures.json
rust/crates/sittir-rust-napi/: Cargo.toml  package.json
rust/crates/sittir-rust-napi/src/: lib.rs
rust/crates/sittir-rust/src/: lib.rs
rust/crates/sittir-rust/templates/: _array_expression_list.jinja  _array_expression_semi.jinja  _attributed_enum_variant.jinja  _attributed_field_declaration.jinja  _attributed_ordered_field.jinja  _attributed_parameter.jinja  _attributed_type_parameter.jinja  _closure_expression_block.jinja  _const_parameter_optional1.jinja  _delim_token_tree_brace.jinja  _expression_statement_block_ending.jinja  _expression_statement_with_semi.jinja  _extern_crate_declaration_optional1.jinja  _field_pattern_named.jinja  _for_expression_optional1.jinja  _function_item_optional1.jinja  _function_type_fn_form.jinja  _impl_item_body.jinja  _impl_item_negative_clause.jinja  _impl_item_positive_clause.jinja  _in_path.jinja  _let_chain.jinja  _let_declaration_optional3.jinja  _line_comment_doc.jinja  _loop_expression_optional1.jinja  _macro_definition_brace.jinja  _macro_definition_bracket.jinja  _macro_definition_paren.jinja  _match_arm_with_comma.jinja  _match_block_arms.jinja  _or_pattern_binary.jinja  _or_pattern_prefix.jinja  _pointer_type_mut.jinja  _range_expression_binary.jinja  _range_expression_postfix.jinja  _range_pattern_left_with_right.jinja  _range_pattern_prefix.jinja  _reference_expression_raw_mut.jinja  _struct_item_brace.jinja  _struct_item_tuple.jinja  (+151 more)
rust/crates/sittir-typescript/: Cargo.toml  build.rs  index.d.ts  index.js  package.json  test-fixtures.json
rust/crates/sittir-typescript-napi/: Cargo.toml  package.json
rust/crates/sittir-typescript-napi/src/: lib.rs
rust/crates/sittir-typescript/src/: lib.rs
rust/crates/sittir-typescript/templates/: _ambient_declaration_global.jinja  _ambient_declaration_module.jinja  _arrow_function__call_signature.jinja  _call_expression_call.jinja  _call_expression_member.jinja  _call_expression_template_call.jinja  _class_body_member.jinja  _class_body_method.jinja  _class_body_method_sig.jinja  _class_heritage_extends_clause.jinja  _class_heritage_implements_clause.jinja  _export_statement_default_decl_arm.jinja  _export_statement_default_decl_arm_default_kw.jinja  _export_statement_default_decl_arm_default_kw_value.jinja  _export_statement_default_from_arm.jinja  _export_statement_default_from_arm_clause_from.jinja  _export_statement_default_from_arm_ns_from.jinja  (+167 more)
(+1070 files in other folders)
