[workspace]
resolver = "2"
members = [
    "crates/sittir-core",
    "crates/sittir-rust-napi",
    "crates/sittir-typescript-napi",
    "crates/sittir-python-napi",
    "../packages/rust/rust-render",
    "../packages/typescript/rust-render",
    "../packages/python/rust-render",
]

# Workspace-wide package metadata defaults. Individual crates override
# `name` / `description` / path keys.
[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/refactory-lang/sittir"

# Centralise common dependency versions so core + render + napi stay
# aligned. Per-crate `Cargo.toml` files pull these via
# `{ workspace = true }` or override when pinning is required.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.24"
sha2 = "0.10"
askama = "0.14"
