[package]
name = "sittir-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Render / readNode / splice primitives for sittir — hot-path engine shared across per-grammar render crates."

[features]
# Enable napi FromNapiValue / ToNapiValue impls for core boundary types
# (Source, Span, Edit). Activated by the per-grammar napi crates via
# `sittir-core = { features = ["napi-bindings"] }`. NOT enabled by
# default so `cargo test -p sittir-core` builds without Node.js symbols.
napi-bindings = ["dep:napi", "dep:napi-derive"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tree-sitter = { workspace = true }
# napi + napi-derive: `#[napi(object)]` on boundary types (see
# data-model.md §3 for `Edit`) expands to references against the napi
# runtime crate. Both are pure Rust — no Node.js is required at
# compile time, so FR-004 ("sittir-core builds without Node.js/npm")
# still holds. The actual .node artifact is linked by the
# sittir-* grammar binding crates; this dep only buys us the boundary
# attribute on `Edit`.
napi = { version = "3", default-features = false, features = ["napi4"], optional = true }
napi-derive = { version = "3", optional = true }
# ast-grep-core is named in spec 012 T003 but deferred from Phase 1;
# the version conflict that previously blocked it (grammar crates
# requiring tree-sitter ^0.24/^0.25 while ast-grep-core >=0.40 requires
# tree-sitter ^0.26.3) is resolved — grammar crates only use
# tree-sitter as a *dev-dep*, production dep is tree-sitter-language 0.1.
# ast-grep-core is only exercised by Phase 3 T022+ (pattern search via
# `find_and_read`); the integration work belongs in that task.
# ast-grep-core = "0.42"
sha2 = { workspace = true }
askama = { workspace = true }

[dev-dependencies]
# Grammar crates used only by the readNode shape-gate tests (T025).
# Kept as dev-deps so the `sittir-core` production artifact doesn't
# pull grammar code — the real grammar binding lives in the per-
# grammar napi crates.
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
