[package]
name = "sittir-parity-tests"
version.workspace = true
edition.workspace = true
publish = false

# Spec 012 T047 — cross-engine parity fixture harness. Pure integration
# tests over the extracted `rust/crates/sittir-render-{lang}/test-fixtures.json`
# corpus. No napi involvement — directly dispatches via each render
# crate's public `render_dispatch`. The napi binding's SittirEngine is
# covered by its own per-crate tests; this crate asserts byte-level
# parity (SC-001a) and reparse-structure parity (SC-001b) against the
# TS engine's captured outputs.

[dependencies]
sittir-core = { path = "../sittir-core" }
sittir-rust-render = { path = "../sittir-render-rust" }
sittir-typescript-render = { path = "../sittir-render-typescript" }
sittir-python-render = { path = "../sittir-render-python" }
# askama is re-exported through render_dispatch's Result<_, askama::Error>
# signature — parity-tests needs it in scope to name the error type.
askama = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
