[package]
name = "sittir-typescript-napi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "napi-rs binding for the sittir Rust engine — TypeScript grammar."

[lib]
crate-type = ["cdylib"]

[dependencies]
sittir-core = { path = "../sittir-core" }
napi = { version = "3", default-features = false, features = ["napi4"] }
napi-derive = "3"
# tree-sitter-typescript 0.23 requires tree-sitter ^0.24, incompatible
# with the workspace-pinned tree-sitter 0.25 at the `links` level.
# Phase 1 skeleton doesn't actually USE the grammar crate (T034 does),
# so it's listed as an optional dep here — the crate compiles without
# the grammar, and T034 will revisit version alignment.
tree-sitter = { workspace = true }
# tree-sitter-typescript = "0.23"

[build-dependencies]
napi-build = "2"
