[package]
name = "sittir-typescript-napi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "napi-rs binding for the sittir Rust engine — TypeScript grammar."

[lib]
crate-type = ["cdylib"]

[dependencies]
sittir-core = { path = "../sittir-core" }
sittir-typescript-render = { path = "../../../packages/typescript/rust-render" }
napi = { version = "3", default-features = false, features = ["napi4"] }
napi-derive = "3"
serde = { workspace = true }
serde_json = { workspace = true }
# tree-sitter-typescript 0.23 declares `tree-sitter = ^0.24`, which
# overlaps with the workspace-pinned 0.25. The cross-version bridge
# goes through tree-sitter-language 0.1 (a semver-stable ABI crate),
# so the 0.25 runtime can `set_language` on a 0.23-generated grammar
# at runtime — matches the rationale documented in the workspace
# root `Cargo.toml` for keeping tree-sitter pinned at 0.25.
tree-sitter = { workspace = true }
tree-sitter-typescript = "0.23"

[build-dependencies]
napi-build = "2"
