[package]
name = "sittir-typescript-napi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "napi-rs binding for the sittir Rust engine — TypeScript grammar."

[lib]
crate-type = ["cdylib"]

[dependencies]
sittir-core = { path = "../sittir-core" }
sittir-typescript-render = { path = "../sittir-render-typescript" }
napi = { version = "3", default-features = false, features = ["napi4"] }
napi-derive = "3"
serde = { workspace = true }
serde_json = { workspace = true }
# tree-sitter-typescript 0.23 only uses tree-sitter as a dev-dep;
# its production dep is tree-sitter-language 0.1 (semver-stable ABI
# bridge), so the workspace-pinned 0.26 runtime links it correctly.
tree-sitter = { workspace = true }
tree-sitter-typescript = "0.23"

[build-dependencies]
napi-build = "2"
